# scl

./: .gitignore  Dockerfile
app/: 2main.cc  CMakeLists.txt  main.cc
src/: CMakeLists.txt
src/classes/: CMakeLists.txt  person.cc  person.h
src/enum/: CMakeLists.txt  enum.cc  enum.h
src/foo/: CMakeLists.txt
src/for/: CMakeLists.txt  for.cc  for.h
src/free_function/: CMakeLists.txt  free_function.cc  free_function.h
src/if/: CMakeLists.txt  if.cc  if.h
src/immediate/: CMakeLists.txt  immediate.cc  immediate.h
src/inheritance/: CMakeLists.txt  inheritance.cc  inheritance.h
src/lambda/: CMakeLists.txt
src/struct/: CMakeLists.txt
src/switch/: CMakeLists.txt  switch.cc  switch.h
src/while/: CMakeLists.txt  while.cc  while.h
