add_subdirectory(foo)
add_subdirectory(bar)
add_subdirectory(classes)
 add_subdirectory(struct)
add_subdirectory(inheritance)
add_subdirectory(enum)
add_subdirectory(if)
add_subdirectory(while)
add_subdirectory(for)
add_subdirectory(switch)
add_subdirectory(immediate)
add_subdirectory(lambda)
add_subdirectory(free_functions)
